fixed error page title color on dark mode

--- a/client/src/pages/error.css
+++ b/client/src/pages/error.css
@@ -8,8 +8,7 @@
   z-index: 5;
 }
 
-body.dark .error__text,
-body.dark .error__link {
+body.dark .error__title {
   color: var(--color-pink);
 }
 
